Stop menu overflowing at small widths

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,6 +139,9 @@ a.pure-button-primary {
     color: #AECFE5;
 }
 
+.pure-menu-horizontal {
+    white-space: normal;
+}
 
 /*
  * -- SPLASH STYLES --
